k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapa-frontend
  namespace: sapa
  labels:
    app: sapa-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapa-frontend
  template:
    metadata:
      labels:
        app: sapa-frontend
    spec:
      containers:
        - name: frontend
          image: sapa-frontend:1.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: sapa-frontend
  namespace: sapa
spec:
  selector:
    app: sapa-frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
