k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sapa-mongo
  namespace: sapa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sapa-mongo
  template:
    metadata:
      labels:
        app: sapa-mongo
    spec:
      containers:
      - name: mongo
        image: mongo:6
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: sapa-mongo
  namespace: sapa
spec:
  selector:
    app: sapa-mongo
  ports:
  - port: 27017
    targetPort: 27017
