k8s/mosquitto-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: sapa-mosquitto-nodeport
  namespace: sapa
spec:
  type: NodePort
  selector:
    app: sapa-mosquitto
  ports:
  - name: mqtt
    port: 1883
    targetPort: 1883
    nodePort: 31883
