k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sapa-ingress
  namespace: sapa
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - sapa.farhn.dev
      secretName: sapa-farhn-dev-tls
  rules:
    - host: sapa.farhn.dev
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: sapa-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sapa-frontend
                port:
                  number: 80
